--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-contrib-mqttjsonrpc",
-  "version": "0.0.1",
-  "description": "Node RED wrapper around a JSON RPC 2.0 implementation.",
+  "version": "0.0.2",
+  "description": "JSON RPC over MQTT node.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
